--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "build-css": "node-sass src/ o src/",
+    "build-css": "node-sass src/ -o src/",
     "watch-css": "npm run build-css && node-sass src/ -o src/ --watch",
-    "start": "npm run watch-css && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
