--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-router": "^4.1.2",
+    "react-scripts": "1.0.10",
+    "styled-components": "^2.1.2",
+    "whatwg-fetch": "^2.0.3"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "build-css": "node-sass src/ -o src/",
     "watch-css": "npm run build-css && node-sass src/ -o src/ --watch",
