--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "babel-plugin-styled-components-named":"0.1.1"
   }
 }
