--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@types/node": "^8.0.20",
     "@types/react": "^16.0.1",
     "@types/react-dom": "^15.5.2",
+    "@types/react-router": "^4.0.14",
+    "@types/react-router-dom": "^4.0.7",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
@@ -42,7 +46,9 @@
     "webpack": "2.6.0",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "node-sass": "^4.5.3",
+    "babel-plugin-styled-components-named": "0.1.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -90,6 +96,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "styled-components-named"
     ]
   },
   "eslintConfig": {
