--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animated": "^0.2.0",
+    "immutable": "^3.8.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-transition-group": "^2.2.0",
+    "redux": "^3.7.2",
+    "styled-components": "^2.1.2"
+  },
+  "devDependencies": {
+    "@types/immutable": "^3.8.7",
     "@types/jest": "^20.0.6",
     "@types/node": "^8.0.20",
     "@types/react": "^16.0.1",
     "@types/react-dom": "^15.5.2",
+    "@types/react-redux": "^5.0.1",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "styled-components": "^2.1.2"
-  },
-  "devDependencies": {
+    "@types/react-router-redux": "^5.0.5",
+    "@types/redux": "^3.6.0",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
@@ -28,6 +38,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
+    "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
@@ -43,13 +54,12 @@
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
     "typescript": "~2.4.0",
+    "typescript-plugin-styled-components": "0.0.4",
     "url-loader": "0.5.8",
     "webpack": "2.6.0",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3",
-    "node-sass": "^4.5.3",
-    "babel-plugin-styled-components-named": "0.1.1"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -97,9 +107,6 @@
   "babel": {
     "presets": [
       "react-app"
-    ],
-    "plugins": [
-      "styled-components-named"
     ]
   },
   "eslintConfig": {
